--- a/src/components/chmod-checkbox/chmod-checkbox.scss
+++ b/src/components/chmod-checkbox/chmod-checkbox.scss
@@ -136,3 +136,156 @@ input[type="checkbox"] {
     }
   }
 }
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.column1 {
+  grid-column: 1;
+  grid-row: 3;
+}
+.column2 {
+  grid-column: 2;
+  grid-row: 3;
+}
+.column3 {
+  grid-column: 3;
+  grid-row: 3;
+}
+
+/**
+* Bootstrap CSS
+*/
+
+// .col-xl-1,
+// .col-xxl-1,
+// .col-xxxl-1,
+// .col-xl-2,
+// .col-xxl-2,
+// .col-md-2,
+// .col-xxxl-2,
+// .col-xl-3,
+// .col-xxl-3,
+// .col-md-3,
+// .col-xxxl-3,
+// .col-xl-4,
+// .col-xxl-4,
+// .col-md-4,
+// .col-xxxl-4,
+// .col-xl-5,
+// .col-xxl-5,
+// .col-md-5,
+// .col-xxxl-5,
+// .col-xl-6,
+// .col-xxl-6,
+// .col-md-6,
+// .col-xxxl-6,
+// .col-xl-7,
+// .col-xxl-7,
+// .col-md-7,
+// .col-xxxl-7,
+// .col-xl-8,
+// .col-xxl-8,
+// .col-md-8,
+// .col-xxxl-8,
+// .col-xl-9,
+// .col-xxl-9,
+// .col-md-9,
+// .col-xxxl-9,
+// .col-xl-10,
+// .col-xxl-100,
+// .col-xxxl-10,
+// .col-xl-11,
+// .col-xxl-111,
+// .col-xxxl-11,
+// .col-xl-12,
+// .col-xxl-122,
+// .col-xxxl-12 {
+//   position: relative;
+//   min-height: 1px;
+//   padding-right: 15px;
+//   padding-left: 15px;
+// }
+// @media (min-width: 992px) {
+//   .col-md-4 {
+//     width: 33.33333333%;
+//   }
+// }
+// @media (min-width: 992px) {
+//   .col-md-1,
+//   .col-md-10,
+//   .col-md-11,
+//   .col-md-12,
+//   .col-md-2,
+//   .col-md-3,
+//   .col-md-4,
+//   .col-md-5,
+//   .col-md-6,
+//   .col-md-7,
+//   .col-md-8,
+//   .col-md-9 {
+//     float: left;
+//   }
+// }
+// .col-lg-1,
+// .col-lg-10,
+// .col-lg-11,
+// .col-lg-12,
+// .col-lg-2,
+// .col-lg-3,
+// .col-lg-4,
+// .col-lg-5,
+// .col-lg-6,
+// .col-lg-7,
+// .col-lg-8,
+// .col-lg-9,
+// .col-md-1,
+// .col-md-10,
+// .col-md-11,
+// .col-md-12,
+// .col-md-2,
+// .col-md-3,
+// .col-md-4,
+// .col-md-5,
+// .col-md-6,
+// .col-md-7,
+// .col-md-8,
+// .col-md-9,
+// .col-sm-1,
+// .col-sm-10,
+// .col-sm-11,
+// .col-sm-12,
+// .col-sm-2,
+// .col-sm-3,
+// .col-sm-4,
+// .col-sm-5,
+// .col-sm-6,
+// .col-sm-7,
+// .col-sm-8,
+// .col-sm-9,
+// .col-xs-1,
+// .col-xs-10,
+// .col-xs-11,
+// .col-xs-12,
+// .col-xs-2,
+// .col-xs-3,
+// .col-xs-4,
+// .col-xs-5,
+// .col-xs-6,
+// .col-xs-7,
+// .col-xs-8,
+// .col-xs-9 {
+//   position: relative;
+//   min-height: 1px;
+//   padding-right: 15px;
+//   padding-left: 15px;
+// }
+
+// .row {
+//   margin-right: -15px;
+//   margin-left: -15px;
+// }
