--- a/src/components/chmod-checkbox/chmod-checkbox.scss
+++ b/src/components/chmod-checkbox/chmod-checkbox.scss
@@ -91,7 +91,15 @@ label {
 }
 
 input[type="checkbox"] {
-  display: none; // hide the system checkbox
+  // opacity: 0;
+  z-index: 10;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  margin-right: -30px;
+  position: relative;
+  transform-origin: center;
+  background-color: transparent;
 
   // Let's add some effects after the checkbox is checked
   &:checked {
